# CG-Service

./: CMakeLists.txt  README.md
protocol/: CMakeLists.txt  service.proto
src/: CMakeLists.txt  Cgs_server.cpp  Cgs_server.h  main.cpp
